# Xaml-island-rs

./: Cargo.toml  Page.xaml  README.md  build.rs  program.manifest  resources.rc
bindings/: Cargo.toml  build.rs
src/: desktop_target.rs  main.rs  ro_runtime.rs
