[package]
name = "xaml-test"
version = "0.1.0"
authors = ["Jacob Lund Mogensen <jacob.mogensen5@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "./bindings" }
windows = "0.10.0"

[build-dependencies]
windres = "^0.2.2"
