[package]
name = "xaml-test"
version = "0.1.0"
authors = ["Jacob Lund Mogensen <jacob.mogensen5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
bindings = { path = "./bindings" }
windows = "0.10.0"

[build-dependencies]
windres = "^0.2.2"
